[package]
name = "rust-api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.1"
tokio = { version = "1", features = ["full"] }
hyper = { version = "1.6.0", features = ["full"] }
tower-http = { version = "0.6.2", features = ["full"] } # For performance optimizations
tower = "0.5.2" # Needed for ServiceExt (middleware support)
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
num_cpus = "1.16.0" # For performance optimizations